assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  color: #dad3c6;
  list-style-type: none;
  text-decoration: none;
  font-family: "Montserrat", sans-serif;
  transition: 100ms;
}

body {
  text-shadow: 0 0 10px black;
  height: 100vh;
  width: 100%;
  overflow: hidden;
}

.linea {
  background-color: #dad3c6;
  height: 2px;
  margin: 50px 0;
}

.hidden {
  display: none;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
  backdrop-filter: blur(3px);
  z-index: 1;
}

.attiva {
  color: rgb(255, 191, 71);
}

.underlined {
  text-decoration: underline;
}

.background-black-opacity-05 {
  background: rgba(0, 0, 0, 0.5);
}

header {
  /* background: linear-gradient(to bottom right, #1d2b35, #2d4f67); */
  background: linear-gradient(to bottom, #07050e 70%, #342567);
  height: 75px;
  padding: 0 30px;
  box-shadow: 0 0 20px black;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 2;
}

nav ul li {
  padding: 0 10px;
  height: 100%;
}

nav ul li:hover {
  cursor: pointer;
  color: #9a8661;
}
/* -------------------------------------------- */

main {
  background-image: url("../img/background-stars.gif");
  background-repeat: no-repeat;
  background-size: cover;
  height: calc(100vh - 75px);
  padding: 50px 0 400px;
}

/* Stilizza il track della scrollbar */
main::-webkit-scrollbar-track {
  background-color: transparent;
}

/* Stilizza il thumb della scrollbar */
/* main::-webkit-scrollbar-thumb {
  background-color: #888;
  border-radius: 5px;
} */

/* Stilizza il corner della scrollbar */
/* main::-webkit-scrollbar-corner {
  background-color: #f2f2f2;
} */

section {
  width: 70%;
  margin: 0 auto;
}

.info {
  /* background: linear-gradient(to bottom, #17222a 70%, #294b64); */
  background: linear-gradient(to bottom, #07050e 70%, #342567);
  padding: 20px;
  margin: 0 50px;
  border-radius: 60px;
  margin-bottom: 50px;
}

.nome {
  text-shadow: 0 0 20px #8879ba;
}

.professione {
  text-shadow: 0 0 20px #8879ba;
}

/* -------------- ABOUT -------------- */
.about section {
  padding: 40px;
  border-radius: 20px;
}

.about section p {
  width: 70%;
  line-height: 40px;
}

.about ul {
  display: flex;
}

.about ul {
  background: rgba(100, 100, 100, 0.5);
  margin: 30px 10px 0;
  padding: 10px;
  border-radius: 10px;

  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.about li {
  margin: 0 20px;
}

.logoLinguaggio img {
  display: block;
  width: 50px;
  padding: 10px 0;
}

/* -------------------------------------------------------------- */

.home i {
  font-size: 32px;
  margin-right: 20px;
}

.fa-bars {
  font-size: 30px;
}

.fa-brands:hover {
  position: relative;
  cursor: pointer;
  transform: scale(1.2);
}

.fa-github:hover {
  color: black;
  background-color: grey;
  border-radius: 50%;
}

.fa-linkedin:hover {
  color: #0a66c2;
}

.fa-instagram:hover {
  background: linear-gradient(to bottom right, #5b1eb1, #fe1648, #ffbf00);
  -webkit-background-clip: text;
  -moz-background-clip: text;
  background-clip: text;
  color: transparent;
}

.fa-youtube:hover {
  color: #fe0000;
}

/* ----------------------------------------------- */

@keyframes fade {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.fade {
  animation: fade 0.5s;
}

/* ----------------------------------------------- */

@media screen and (min-width: 320px) {
  main {
    height: 100vh;
    width: 100%;
    overflow: scroll;
  }

  p {
    font-size: 28px;
    padding: 10px 0;
  }

  h2 {
    font-size: 32px;
    padding-bottom: 20px;
  }

  .professione {
    padding-bottom: 0;
  }

  .about-title {
    font-size: 20px;
    font-weight: bold;
    display: block;
  }

  .about h3 {
    font-size: 30px;
  }

  /* Menu a tendina */
  #tendinaLinks {
    color: black;
    position: absolute;
    top: 77px;
    right: 0;
    width: 50%;
    border-radius: 20px 0 20px 0;
    overflow: scroll;
  }

  #tendinaLinks li {
    background: linear-gradient(to bottom, #0e0a1d 80%, #342465);
    color: #dad3c6;
    width: 100%;
    text-align: center;
    padding: 30px;
    margin: -2px;
    border-radius: 20px;
    border-bottom: 1px solid black;
  }

  .text-red {
    color: red;
  }
}

@media screen and (min-width: 320px) and (orientation: landscape) {
  main {
    height: 100%;

    min-height: 150vh;
  }

  .background-black-opacity-05 {
    width: 90%;
  }

  #tendinaLinks {
    min-height: 100vh;
    height: 100%;
    padding-bottom: 100px;
    overflow: scroll;
  }

  .about h3 {
    font-size: 20px;
  }

  p {
    font-size: 20px;
    padding: 10px 0;
  }
}

@media screen and (max-width: 425px) {
  body {
    overflow: scroll !important;
    height: 100%;
  }

  .info {
    width: 90%;
    margin: 0 auto;
    padding: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .nome {
    font-size: 25px;
  }

  .professione {
    font-size: 16px;
    padding-top: 10px;
  }

  /* ------------------ ABOUT ------------------ */
  .about section {
    width: 95%;
    padding: 40px 5px 0;
  }

  .about section p {
    width: 100%;
  }

  .about h3 {
    font-size: 20px;
  }

  .about p {
    font-size: 15px;
  }
}

@media screen and (max-width: 767px) {
  #hambMenu {
    display: block;
    z-index: 2;
  }

  nav ul {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  #hambMenu {
    display: none;
  }

  nav ul {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .nome {
    font-size: 32px;
  }

  .professione {
    font-size: 25px;
    padding-top: 10px;
    padding-left: 20px;
  }
}

@media screen and (min-width: 1024px) {
  .nome {
    font-size: 48px;
    padding-left: 10px;
  }

  .professione {
    font-size: 32px;
    padding-top: 10px;
    padding-left: 30px;
  }
}

